# model_loading_demo

./: Cargo.toml  README.md
shaders/: model.frag.glsl  model.vert.glsl
src/: backend.rs  main.rs  mesh.rs  model.rs  texture.rs
